[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://rankingPage/RankingPage.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="RankingPage" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -190.0
margin_right = 217.0
margin_bottom = -112.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"

[node name="restartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -174.0
margin_top = -260.0
margin_right = 174.0
margin_bottom = -176.0
custom_fonts/font = SubResource( 1 )
text = "RESTART"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="restartButton" to="." method="_on_restartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
